# LightboxController

./: CMakeLists.txt  README.md  build.bat  build.ps1  build_err.txt  crash_log.txt  crash_log2.txt  crash_log3.txt  crash_log4.txt  prd.md  run.bat  run.ps1
qml/: DiscoverDialog.qml  InspectorPanel.qml  Main.qml  PatternLibraryPanel.qml  VideoPatternPanel.qml  qml.qrc
src/: Bulb.cpp  Bulb.h  BulbManager.cpp  BulbManager.h  BulbScanner.cpp  BulbScanner.h  VideoPatternEngine.cpp  VideoPatternEngine.h  ZenggeProtocol.cpp  ZenggeProtocol.h  main.cpp
